# asr_direct_search_manager

./: CMakeLists.txt  README.md  package.xml
action/: directSearch.action
include/: direct_search_handler.hpp  direct_search_manager.hpp  grid_initialisation.hpp  grid_manager.hpp  recording_manager.hpp
include/filter/: concat_approx_equale_poses.hpp  do_filter_iteration.hpp  filter_basic.hpp  filter_is_position_allowed.hpp  filter_minimum_number_of_deleted_normals.hpp  filter_poses_depending_on_already_found_object_types.hpp
include/helper/: pose_helper.hpp  sort_helper.hpp
include/model/: ptu_tuple.hpp  robot_state.hpp
launch/: direct_search_manager.launch
log/: rosconsole.config
rsc/: DynamicParameters.cfg  config.xml  cropBoxWholeRoomRecordingBackup.xml  direct_search_manager_settings.yaml  initializedGrid.xml
src/: direct_search_handler.cpp  direct_search_manager.cpp  grid_initialisation.cpp  grid_manager.cpp  main.cpp  recording_manager.cpp
src/helper/: pose_helper.cpp  sort_helper.cpp
src/model/: ptu_tuple.cpp  robot_state.cpp
test/: test.py
test/src/: direct_search_handler_test.cpp  direct_search_manager_test.cpp  filter_test.cpp  pose_helper_test.cpp  utest.cpp
