<?xml version="1.0"?>
<package>
  <name>asr_direct_search_manager</name>
  <version>1.0.0</version>
  <description>
    This package can be used to generate and manage the poses for the direct
    search. The direct search is used as a opening procedure for the Objectsearch.
    The poses will be generated to cover the current map.
    There are different modes to generate the poses. One is based on a grid and a
    second on a recording of the "cropbox record" mode in the asr_state_machine.
  </description>
  <author>Borella Jocelyn, Karrenbauer Oliver, Meißner Pascal</author>
  <maintainer email="asr-ros@lists.kit.edu">Pascal Meißner</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>asr_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>Boost</build_depend>
  <build_depend>Eigen</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>asr_robot_model_services</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>asr_rapidxml</build_depend>
  <build_depend>next_best_view</build_depend>
  <build_depend>asr_lib_ism</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>tf</build_depend>
  
  
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>asr_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>Boost</run_depend>
  <run_depend>Eigen</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>asr_robot_model_services</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>asr_rapidxml</run_depend>
  <run_depend>next_best_view</run_depend>
  <run_depend>asr_lib_ism</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>tf</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
